--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: "2.1"
 orbs:
   go: circleci/go@1.5.0
+  codecov: codecov/codecov@1.1.3
 jobs:
   build:
     executor:
@@ -13,6 +14,8 @@ jobs:
           covermode: atomic
           failfast: true
           race: true
+      - codecov/upload:
+          file: cover-source.out
 workflows:
   main:
     jobs:
