--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   go: circleci/go@1.5.0
   codecov: codecov/codecov@1.1.3
 jobs:
-  build:
+  test:
     executor:
       name: go/default
       tag: "1.15"
@@ -16,7 +16,23 @@ jobs:
           race: true
       - codecov/upload:
           file: cover-source.out
+  release:
+    executor:
+      name: go/default
+      tag: "1.15"
+    steps:
+      - checkout
+      - run:
+          name: Release
+          command: bash <(curl -sL https://git.io/goreleaser) release
 workflows:
   main:
     jobs:
-      - build
+      - test
+      - release:
+          context: github
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
