chore: add a CI task to tag a release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,26 @@ jobs:
       - run:
           name: Release
           command: bash <(curl -sL https://git.io/goreleaser) release
+  tag:
+    machine: true
+    steps:
+      - checkout
+      - run:
+          name: Setup git
+          command: |
+            git config --global user.email "kawamoto.junpei@gmail.com"
+            git config --global user.name "Deploy Bot"
+      - run:
+          name: Tag and push
+          command: |
+            if git log -1 --oneline | grep -E "Merge pull request.*/(release|hotfix)/v.*"; then
+              VERSION=$(git log -1 --oneline | sed -e "s/.*\(v.*\)$/\1/g")
+              git tag $VERSION
+              git push origin --tags
+              git checkout -b develop origin/develop
+              git merge --no-ff -m "Merge tag '$VERSION' into develop" $VERSION
+              git push origin develop
+            fi
 workflows:
   main:
     jobs:
@@ -36,3 +56,9 @@ workflows:
               ignore: /.*/
             tags:
               only: /^v.*/
+      - tag:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
