refactor: package structure and add document

--- a/codecov.yml
+++ b/codecov.yml
@@ -16,5 +16,5 @@ comment:
   behavior: default
   require_changes: false
 ignore:
-  - "pkg/pixeldrain/client/**/*"
-  - "pkg/pixeldrain/models/**/*"
+  - "client/**/*"
+  - "models/**/*"
