--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/tekwizely/pre-commit-golang
-    rev: v0.8.3
+    rev: v1.0.0-rc.1
     hooks:
       - id: go-fmt
         args:
@@ -13,7 +13,7 @@ repos:
           - github.com/jkawamoto
       - id: golangci-lint-mod
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
       - id: check-merge-conflict
       - id: check-json
@@ -25,14 +25,10 @@ repos:
       - id: trailing-whitespace
       - id: detect-aws-credentials
       - id: detect-private-key
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-go
-    rev: v1.0.1
-    hooks:
-      - id: checkmake
   - repo: local
     hooks:
       - id: circleci_config_validate
         name: CircleCI config validate
         entry: circleci config validate
-        language: python_venv
+        language: python
         files: ^\.circleci/config\.yml$
