--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,4 @@
 repos:
-  - repo: https://github.com/tekwizely/pre-commit-golang
-    rev: v1.0.0-rc.1
-    hooks:
-      - id: go-fmt
-        args:
-          - -w
-      - id: go-test-mod
-      - id: go-imports
-        args:
-          - -w
-          - -local
-          - github.com/jkawamoto
-      - id: golangci-lint-mod
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
@@ -23,12 +10,8 @@ repos:
       - id: end-of-file-fixer
         exclude: ^\.bumpversion\.cfg$
       - id: trailing-whitespace
-      - id: detect-aws-credentials
       - id: detect-private-key
-  - repo: local
+  - repo: https://github.com/golangci/golangci-lint
+    rev: v1.52.2
     hooks:
-      - id: circleci_config_validate
-        name: CircleCI config validate
-        entry: circleci config validate
-        language: python
-        files: ^\.circleci/config\.yml$
+      - id: golangci-lint
