--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,3 +26,12 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
+  windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: ">=1.20"
+      - name: Run tests
+        run: go test -race -v ./...
