--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,6 +31,7 @@ brews:
     tap:
       owner: jkawamoto
       name: homebrew-pixeldrain
+      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
 nfpms:
   - package_name: pixeldrain
     homepage: https://jkawamoto.github.io/go-pixeldrain/
