--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,3 +25,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
+
+  merge:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: develop
+      - name: Merge the new version into develop
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git fetch --tags origin
+          git merge ${REF##*/}
+          git push
+        env:
+          REF: ${{ github.event.push.ref }}
