chore: run swagger-validation from pre-commit
(cherry picked from commit f7bfde7a277d641b1c2d80eb4a5595c152c08393)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,10 @@ repos:
         exclude: ^\.bumpversion\.cfg$
       - id: trailing-whitespace
       - id: detect-private-key
+  - repo: https://github.com/APIDevTools/swagger-cli
+    rev: v4.0.4
+    hooks:
+      - id: swagger-validation
   - repo: https://github.com/golangci/golangci-lint
     rev: v1.63.4
     hooks:
