chore: update goreleaser config and GitHub Action
Upgrade `.goreleaser.yml` to version 2 and adjust repository configuration. Update GoReleaser GitHub Action to v6 in the release workflow.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,10 +18,10 @@ jobs:
           go-version: ">=1.20"
       - name: Run tests
         run: go test -v ./...
-      - uses: goreleaser/goreleaser-action@v5
+      - uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
-          args: release --clean
+          args: release --clean --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
